--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 历史检查
             </p>
         </a>
-        <a href="addCheckInfo.html" class="weui_grid">
+        <a href="addCheckInfo.html?mytype=list" class="weui_grid">
             <div class="weui_grid_icon">
                 <i class="icon">
                     <img src="image/ico_gztj.png">
@@ -156,7 +156,7 @@
             <div class="check-type-list">
                 <h5 class="info-title clearfix">
                     <span>未完成检查项列表</span>
-                    <a href="addCheckInfo.html" class="btn btn_primary btn_add pull-right">新增</a>
+                    <a href="addCheckInfo.html?mytype=info#/info" class="btn btn_primary btn_add pull-right">新增</a>
                 </h5>
                 <ul class="info-part">
                     <li>
