快速入口菜单样式

--- a/bookInfo.html
+++ b/bookInfo.html
@@ -94,37 +94,64 @@
     <div class="weui_actionsheet" id="weui_actionsheet">
         <div class="weui_actionsheet_menu">
             <div class="weui_actionsheet_cell">
-                <dl>
+                <dl class="bookList-dl">
                     <dd>第一章</dd>
                     <dt>
-                    <div class="weui_cell">
-                        <div class="weui_cell_bd weui_cell_primary">
-                            <p>第一节</p>
-                        </div>
-                        <div class="weui_cell_ft">完成</div>
-                    </div>
+                        <a href="#/item_1" class="weui_cell">
+                            <div class="weui_cell_bd weui_cell_primary">
+                                <p>第一节</p>
+                            </div>
+                            <div class="weui_cell_ft text_success">完成</div>
+                        </a>
                     </dt>
                     <dt>
-                    <div class="weui_cell">
-                        <div class="weui_cell_bd weui_cell_primary">
-                            <p>第二节</p>
-                        </div>
-                        <div class="weui_cell_ft">未完成</div>
-                    </div>
+                        <a href="#/item_2" class="weui_cell">
+                            <div class="weui_cell_bd weui_cell_primary">
+                                <p>第二节</p>
+                            </div>
+                            <div class="weui_cell_ft text_warning">未完成</div>
+                        </a>
                     </dt>
                     <dt>
-                    <div class="weui_cell">
-                        <div class="weui_cell_bd weui_cell_primary">
-                            <p>第三节</p>
-                        </div>
-                        <div class="weui_cell_ft">完成</div>
-                    </div>
+                        <a href="#/item_3" class="weui_cell">
+                            <div class="weui_cell_bd weui_cell_primary">
+                                <p>第三节</p>
+                            </div>
+                            <div class="weui_cell_ft text_success">完成</div>
+                        </a>
+                    </dt>
+                </dl>
+                <dl class="bookList-dl">
+                    <dd>第二章</dd>
+                    <dt>
+                        <a href="#/item_4" class="weui_cell">
+                            <div class="weui_cell_bd weui_cell_primary">
+                                <p>第一节</p>
+                            </div>
+                            <div class="weui_cell_ft text_success">完成</div>
+                        </a>
+                    </dt>
+                    <dt>
+                        <a href="#/item_5" class="weui_cell">
+                            <div class="weui_cell_bd weui_cell_primary">
+                                <p>第二节</p>
+                            </div>
+                            <div class="weui_cell_ft text_warning">未完成</div>
+                        </a>
+                    </dt>
+                    <dt>
+                        <a href="#/item_6" class="weui_cell">
+                            <div class="weui_cell_bd weui_cell_primary">
+                                <p>第三节</p>
+                            </div>
+                            <div class="weui_cell_ft text_success">完成</div>
+                        </a>
                     </dt>
                 </dl>
             </div>
-            <div class="weui_actionsheet_cell">示例菜单</div>
-            <div class="weui_actionsheet_cell">示例菜单</div>
-            <div class="weui_actionsheet_cell">示例菜单</div>
+            <!--<div class="weui_actionsheet_cell">示例菜单</div>-->
+            <!--<div class="weui_actionsheet_cell">示例菜单</div>-->
+            <!--<div class="weui_actionsheet_cell">示例菜单</div>-->
         </div>
         <div class="weui_actionsheet_action">
             <div class="weui_actionsheet_cell" id="actionsheet_cancel">取消</div>
