需要做一个查看检查项详细的页面

--- a/bookInfo.html
+++ b/bookInfo.html
@@ -19,16 +19,16 @@
 <div class="layout-footer fixed-bottom">
     <div class="raido-option-list clearfix">
         <label class="raido-item" for="Y">
-            <input type="radio" name="zc" id="Y">是(Y)
+            <input type="radio" name="zc" value="Y" id="Y">是(Y)
         </label>
         <label class="raido-item" for="N">
-            <input type="radio" name="zc" id="N">不是(N)
+            <input type="radio" name="zc" value="N" id="N">不是(N)
         </label>
         <label class="raido-item" for="NS">
-            <input type="radio" name="zc" id="NS">未见(NS)
+            <input type="radio" name="zc" value="NS" id="NS">未见(NS)
         </label>
         <label class="raido-item" for="NA">
-            <input type="radio" name="zc" id="NA">不适用(NA)
+            <input type="radio" name="zc" value="NA" id="NA">不适用(NA)
         </label>
         <!--<span class="raido-item">正常</span>-->
         <!--<span class="raido-item">异常</span>-->
