增加一个检查项

--- a/bookInfo.html
+++ b/bookInfo.html
@@ -88,6 +88,45 @@
     </div>
 </script>
 
+<script type="text/html" id="tpl_3">
+    <div class="check-info-detail check-info-item">
+        <h5 class="info-title">
+            <span>2.01</span>
+        </h5>
+        <div class="weui_panel_bd">
+            <div class="weui_media_box weui_media_text">
+                <h4 class="weui_media_title">船舶登记证书（CERTIFICATION OF REGISTRY）或国籍证书（CERTIFICATE OF NATIONALITY）</h4>
+                <p class="weui_media_desc">【相关文件】《船舶证书文件管理规定》、《船旗国政府证书文件管理规定》、《船舶台账记录管理规定》、《联合国海洋法公约》/1965FAL</p>
+                <p class="weui_media_desc">【理解】</p>
+                <p class="weui_media_desc">1、船舶登记是船舶所有人、经营人、抵押人、光租人等主体依据有关国际公约和各国法律规定（海商法、中华人民共和国船舶登记条例、中华人民共和国船舶最低安全规则、船旗国有关船舶登记的法规）向船舶登记机关提出申请，船舶登记机关审查符合条件后依法予以登记，发放相应证书，其作用可以获得船旗国的法定保护、合法权益、主管机关有效监管、确定船舶所具有的法律地位各权利义务；</p>
+                <p class="weui_media_desc">2、船舶登记分为：船名、船舶识别号、烟囱马克、所有权登记、船舶国籍登记、抵押权登记、租赁权登记等，登记后可获得船旗国国藉以及悬挂其国旗航行的权利；</p>
+                <p class="weui_media_desc">3、船舶登记证书根据不同船旗国规定有所不同，大致有如下几种证书：</p>
+                <ul>
+                    <li><p class="weui_media_desc">船舶所有权登记证书；</p></li>
+                    <li><p class="weui_media_desc">船舶登记证书（香港旗为“Certificate of Registry《注册登记证明书》”；</p></li>
+                    <li><p class="weui_media_desc">巴拿马旗为“Statutory Certificate of Registry /International  Service”）；</p></li>
+                    <li><p class="weui_media_desc">船舶抵压权登记证书；</p></li>
+                    <li><p class="weui_media_desc">船舶租赁权登记证书等；</p></li>
+                </ul>
+                <p class="weui_media_desc">4、正本证书应保存在船。</p>
+                <p class="weui_media_desc">备注：证书保存要求：目录中英文对照，证书与文书夹分开。</p>
+                <p class="weui_media_desc">【相关缺陷】船舶登记证书破损,无法进行识别证书所列事项。</p>
+                <p class="weui_media_desc">【相关记录】《船旗国证书文件登记表》</p>
+                <div class="ng-info">
+                    <div class="weui_cells weui_cells_form">
+                        <div class="weui_cell">
+                            <div class="weui_cell_bd weui_cell_primary">
+                                <textarea class="weui_textarea" placeholder="请输入不规范的理由" rows="3"></textarea>
+                                <div class="weui_textarea_counter"><span>0</span>/200</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</script>
+
 <!--BEGIN actionSheet-->
 <div id="actionSheet_wrap" class="actionsheet-bookList">
     <div class="weui_mask_transition" id="mask"></div>
