新增展示页面

--- a/viewDetail.html
+++ b/viewDetail.html
@@ -12,11 +12,141 @@
 <body>
 <div class="layout-header">
     <a href="javascript:history.back(-1);" class="header-btn-l">返回</a>
-    <h1 class="page-title">劳动年龄内居民信息</h1>
-    <a href="#" class="header-btn-r"></a>
+    <h1 class="page-title">历史检查项详细</h1>
+    <!--<a href="#" class="header-btn-r"></a>-->
 </div>
 <div class="container" id="container"></div>
 
+<script type="text/html" id="unit_1">
+    <div class="unit_info">
+        <h6>第一章:概况</h6>
+        <div class="unit_part">
+            <dl class="unit_item">
+                <dt>1.01:船名</dt>
+                <dd>检查结果：是(Y)</dd>
+            </dl>
+            <dl class="unit_item">
+                <dt>1.02:船舶IMO编码</dt>
+                <dd>检查结果：不是(N)</dd>
+                <dd>原因：这里填写原因</dd>
+            </dl>
+            <dl class="unit_item">
+                <dt>1.03:船旗</dt>
+                <dd>检查结果：未见(NS)</dd>
+            </dl>
+            <dl class="unit_item">
+                <dt>1.04:载重吨</dt>
+                <dd>检查结果：不适用(NA)</dd>
+            </dl>
+            <dl class="unit_item">
+                <dt>1.05:交船日期</dt>
+                <dd>检查结果：不是(N)</dd>
+                <dd>原因：这里填写原因</dd>
+            </dl>
+            <dl class="unit_item">
+                <dt>1.06:船舶类型</dt>
+                <dd>检查结果：不是(N)</dd>
+                <dd>原因：这里填写原因</dd>
+            </dl>
+            <dl class="unit_item">
+                <dt>1.07:船体（结构）类型（参照《国际防止污染证书》（IOPPC）格式）</dt>
+                <dd>检查结果：不是(N)</dd>
+                <dd>原因：这里填写原因</dd>
+            </dl>
+            <dl class="unit_item">
+                <dt>1.08:船舶经营人名称</dt>
+                <dd>检查结果：不是(N)</dd>
+                <dd>原因：这里填写原因</dd>
+            </dl>
+            <dl class="unit_item">
+                <dt>1.09:前船舶经营人开始承担责任的日期</dt>
+                <dd>检查结果：不是(N)</dd>
+                <dd>原因：这里填写原因</dd>
+            </dl>
+            <dl class="unit_item">
+                <dt>1.10:船级社名称</dt>
+                <dd>检查结果：不是(N)</dd>
+                <dd>原因：这里填写原因</dd>
+            </dl>
+            <dl class="unit_item">
+                <dt>1.11:船舶入级证书到期日期</dt>
+                <dd>检查结果：不是(N)</dd>
+                <dd>原因：这里填写原因</dd>
+            </dl>
+            <dl class="unit_item">
+                <dt>1.12:上次特别检验完成时间</dt>
+                <dd>检查结果：不是(N)</dd>
+                <dd>原因：这里填写原因</dd>
+            </dl>
+            <dl class="unit_item">
+                <dt>1.13:船级社认可的上次出坞或修理完成日期</dt>
+                <dd>检查结果：不是(N)</dd>
+                <dd>原因：这里填写原因</dd>
+            </dl>
+            <dl class="unit_item">
+                <dt>1.14:上次船舶检验状况报告日期</dt>
+                <dd>检查结果：不是(N)</dd>
+                <dd>原因：这里填写原因</dd>
+            </dl>
+            <dl class="unit_item">
+                <dt>1.16:上一次接受PSC检查的时间</dt>
+                <dd>检查结果：不是(N)</dd>
+                <dd>原因：这里填写原因</dd>
+            </dl>
+            <dl class="unit_item">
+                <dt>1.17:上一次接受PSC检查的港口</dt>
+                <dd>检查结果：不是(N)</dd>
+                <dd>原因：这里填写原因</dd>
+            </dl>
+            <dl class="unit_item">
+                <dt>1.18:船舶自查完成日期</dt>
+                <dd>检查结果：不是(N)</dd>
+                <dd>原因：这里填写原因</dd>
+            </dl>
+            <dl class="unit_item">
+                <dt>1.19:船舶自查地点</dt>
+                <dd>检查结果：不是(N)</dd>
+                <dd>原因：这里填写原因</dd>
+            </dl>
+            <dl class="unit_item">
+                <dt>1.20:岸基检查人员登船日期和时间</dt>
+                <dd>检查结果：不是(N)</dd>
+                <dd>原因：这里填写原因</dd>
+            </dl>
+            <dl class="unit_item">
+                <dt>1.21:岸基检查人员离船日期和时间</dt>
+                <dd>检查结果：不是(N)</dd>
+                <dd>原因：这里填写原因</dd>
+            </dl>
+            <dl class="unit_item">
+                <dt>1.22:岸基检查所花费时间</dt>
+                <dd>检查结果：不是(N)</dd>
+                <dd>原因：这里填写原因</dd>
+            </dl>
+            <dl class="unit_item">
+                <dt>1.23:岸基检查人员姓名</dt>
+                <dd>检查结果：不是(N)</dd>
+                <dd>原因：这里填写原因</dd>
+            </dl>
+            <dl class="unit_item">
+                <dt>1.24:岸基检查时船舶作业状况</dt>
+                <dd>检查结果：不是(N)</dd>
+                <dd>原因：这里填写原因</dd>
+            </dl>
+            <dl class="unit_item">
+                <dt>1.25:岸基检查时船舶货载情况</dt>
+                <dd>检查结果：不是(N)</dd>
+                <dd>原因：这里填写原因</dd>
+            </dl>
+        </div>
+    </div>
+    <div class="layout-footer fixed-bottom">
+        <div class="weui_dialog_ft">
+            <a href="javascript:;" id="go_back" class="weui_btn_footer weui_btn_plain_default">上一章</a>
+            <a href="#/1_02" id="go_to" class="weui_btn_footer weui_btn_plain_default">下一章</a>
+        </div>
+    </div>
+</script>
 <script type="text/javascript" src="lib/jquery/jquery.min.js"></script>
 <script type="text/javascript" src="lib/hotcss/hotcss.js"></script>
 <script type="text/javascript" src="lib/weui/router.min.js"></script>
