第一稿演示稿

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="nav-item-cont weui_tab_bd">
             <ul class="info-part">
                 <li>
-                    <a class="item-link" href="javascript:;">
+                    <a class="item-link" href="viewDetail.html">
                         <div class="weui_panel_bd">
                             <div class="weui_media_box weui_media_text clearfix">
                                 <h4 class="weui_media_title clearfix">
@@ -134,7 +134,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="item-link" href="javascript:void(0)">
+                    <a class="item-link" href="viewDetail.html">
                         <div class="weui_panel_bd">
                             <div class="weui_media_box weui_media_text">
                                 <h4 class="weui_media_title clearfix">
@@ -160,13 +160,13 @@
                 </h5>
                 <ul class="info-part">
                     <li>
-                        <a class="item-link" href="javascript:void(0)">
+                        <button id="js-upload" type="button" class="pull-right item-state btn_primary">上传</button>
+                        <a class="item-link" href="viewDetail.html">
                             <div class="weui_panel_bd">
                                 <div class="weui_media_box weui_media_text clearfix">
                                     <h4 class="weui_media_title clearfix">
                                         <span class="type-name pull-left">船舶自查</span>
                                         <span class="check-time pull-left">2016-06-06</span>
-                                        <button type="button" class="pull-right item-state btn_primary">上传</button>
                                     </h4>
                                     <p class="weui_media_desc">
                                         <span class="country-name">国家：波斯尼亚和黑塞哥维那</span>
@@ -184,7 +184,7 @@
                         </a>
                     </li>
                     <li>
-                        <a class="item-link" href="javascript:void(0)">
+                        <a class="item-link" href="bookInfo.html#/item_1">
                             <div class="weui_panel_bd">
                                 <div class="weui_media_box weui_media_text clearfix">
                                     <h4 class="weui_media_title clearfix">
