--- a/viewDetail.html
+++ b/viewDetail.html
@@ -19,7 +19,9 @@
 
 <script type="text/html" id="unit_1">
     <div class="unit_info">
-        <h6>第一章:概况</h6>
+        <h5 class="info-title">
+            <span>第一章:概况</span>
+        </h5>
         <div class="unit_part">
             <dl class="unit_item">
                 <dt>1.01:船名</dt>
