--- a/historyList.html
+++ b/historyList.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>未上传的检查列表</title>
-    <link href="image/shi.ico" rel="shortcut icon">
+    <link href="image/ship.ico" rel="shortcut icon">
 
     <link rel="stylesheet" href="sytle/css/ship-ui/ship-mobile-ui.css">
     <link rel="stylesheet" href="sytle/css/index.css">
@@ -11,7 +11,7 @@
 <body class="ui-body">
 <div class="ui-page ui-header-fixed ui-footer-fixed">
     <div class="ui-header">
-        <a href="#" data-role="goBackPage" class="ui-btn-simple ui-btn-back ui-header-btn-left">返回</a><!--无边框的按钮ui-btn-simple；链接ui-btn-link;-->
+        <a href="./index.html" data-role="goBackPage" class="ui-btn-simple ui-btn-back ui-header-btn-left">返回</a><!--无边框的按钮ui-btn-simple；链接ui-btn-link;-->
         <h1 class="ui-title">未上传的检查列表</h1>
         <!--<a href="#" type="button" data-role="changePage" class="ui-btn-simple ui-header-btn-right">编辑</a>-->
     </div>
