--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>船舶管理检查智能平台</title>
-    <link href="image/shi.ico" rel="shortcut icon">
+    <link href="image/ship.ico" rel="shortcut icon">
 
     <!--<link rel="stylesheet" href="lib/weui/style/weui.css">-->
     <link rel="stylesheet" href="sytle/css/ship-ui/ship-mobile-ui.css">
