--- a/bookInfo - 副本.html
+++ b/bookInfo - 副本.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
     <title>船舶管理检查智能平台</title>
-    <link href="image/shi.ico" rel="shortcut icon">
+    <link href="image/ship.ico" rel="shortcut icon">
 
     <link rel="stylesheet" href="lib/weui/style/weui.css">
     <link rel="stylesheet" href="sytle/css/index.css">
